Nullability annotations for Frank!Framework Commons and Credential Provider (#10264)