@@ -43,9 +43,6 @@ public abstract class AbstractMapCredentialFactory implements ISecretProvider {
 		CredentialConstants appConstants = CredentialConstants.getInstance();
 
 		aliases = getCredentialMap(appConstants);
-		if (aliases == null) {
-			throw new IllegalArgumentException(this.getClass().getName()+" cannot get alias map");
-		}
 	}
 
 	protected abstract Map<String,String> getCredentialMap(CredentialConstants appConstants) throws IOException;
@@ -88,7 +85,7 @@ public abstract class AbstractMapCredentialFactory implements ISecretProvider {
 	public Set<String> getConfiguredAliases() {
 		Set<String> aliasNames = new LinkedHashSet<>();
 		for (String rawName: aliases.keySet()) {
-			String name = StringUtil.split(rawName, "/").get(0);
+			String name = StringUtil.split(rawName, "/").getFirst();
 			aliasNames.add(name);
 		}
 		return aliasNames;
